--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@racehub-io/f1-telemetry-client": "^0.2.6",
     "express": "^4.17.2",
+    "node-fetch": "^2",
     "obs-websocket-js": "^4.0.3",
     "socket.io": "^4.4.1"
   }
